# learnFastAPI

./: .gitignore  README.md  pyproject.toml
src/: .env-sample  blog.db  config.py  database.py  exceptions.py  main.py
src/playgrounds/: router.py
src/users/: models.py  router.py  schemas.py  service.py  utils.py
